bitcoin wallets page

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -1299,3 +1299,118 @@ header.masthead.lapps .header-content p {
 .lappfooter {
   background: #ffffff;
 }
+
+.first .section-heading h1 {
+  font-size: 88px;
+  font-weight: bold;
+}
+
+.onchain-page .download {
+  background: #EEFAFF;
+  padding: 280px 0;
+}
+
+.onchain footer {
+  background: #fff;
+}
+
+.onchain-page .lcontent {
+  font-size: 18px;
+  font-weight: 300;
+  margin-bottom: 38px;
+}
+
+.wallet-types {
+  background: #EEFAFF;
+  overflow: hidden;
+}
+
+.wallet-types h2 {
+  font-weight: bold;
+}
+
+.slick-slide {
+  width: 380px;
+}
+
+@media (max-width: 991px) {
+  .slick-slide {
+    width: 320px;
+  }
+}
+
+.slick-slide img {
+  width: 100%;
+}
+
+.slick-slide h3 {
+  font-size: 22px;
+  font-weight: bold;
+  padding: 0 16px;
+}
+
+.slick-slide p {
+  font-size: 13px;
+  padding: 0 16px;
+}
+
+.slick-arrow {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  border: none;
+  padding: 4px 16px;
+  min-width: 100px;
+  -webkit-transition: all .2s ease-out;
+  -moz-transition: all .2s ease-out;
+  -o-transition: all .2s ease-out;
+  transition: all .2s ease-out;
+}
+
+.slick-arrow:hover {
+  background: rgba(12, 37, 80, 0.6);
+  color: #ffffff;
+  cursor: pointer;
+  outline: 0 none;
+}
+
+.slick-arrow :active {
+  outline: 0 transparent !important;
+  border: 0;
+  box-shadow: none;
+}
+
+button:focus {
+  outline: 0 transparent !important;
+  border: 0;
+  box-shadow: none;
+}
+
+.app-preview img {
+  max-width: 100%;
+}
+
+.slider {
+  padding-top: 84px;
+  padding-bottom: 56px;
+}
+
+.slick-prev {
+  left: 16px;
+  top: 32px;
+}
+
+.slick-next {
+  top: 32px;
+  left: 144px;
+}
+
+.create-import h2 {
+  font-weight: bold;
+  font-size: 50px;
+  margin-bottom: 24px;
+}
+
+.create-import p {
+  font-size: 16px;
+}
