--- a/css/new-age.css
+++ b/css/new-age.css
@@ -612,12 +612,36 @@ section.features .flightning a {
 }
 
 .features-page h3 {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   font-weight: 600;
 }
 
+.features-page p {
+  font-size: 1rem;
+  padding: 8px 0;
+  margin: 0;
+  color: #81868E;
+}
+
 .features-page .feature-item {
-  padding: 32px 0 32px 0;
+  padding: 24px;
+  width: 100%;
+  border: 1px solid #eee;
+  margin-bottom: 24px;
+  border-radius: 6px;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.features-page .feature-item:hover {
+  background-color: white;
+  -webkit-box-shadow: 0px 8px 26px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 8px 26px 2px rgba(0, 0, 0, 0.05);
+}
+
+.features-page .feature-item i {
+  color: #68BBE1;
 }
 
 .features-page a:link, .features-page a:active, .features-page a:visited {
