add sticker pack highlight

--- a/marketplace/marketplace.css
+++ b/marketplace/marketplace.css
@@ -55,7 +55,7 @@ a {
 	width: 48px; 
 }
 .highlight {
-  background: url(img/boltathon.png) no-repeat center;
+  background: url(img/highlight.png) no-repeat center;
   height: 228px;
   background-size: cover;
   margin: 16px 16px 24px 16px;
