--- a/marketplace/marketplace.css
+++ b/marketplace/marketplace.css
@@ -39,6 +39,7 @@ a {
 .apptext { 
 	grid-area: apptext;
 	padding: 0 0 0 8px;
+  position: relative;
 }
 .apptext h2 { 
 	color: #0C2550;
@@ -84,4 +85,14 @@ a {
   font-size: 14px;
   margin: 0px;
   padding: 0px;
+}
+.new {
+  width: 12px;
+  height: 12px;
+  background: #68BBE1;
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 10px;
 }
