--- a/marketplace/marketplace.css
+++ b/marketplace/marketplace.css
@@ -4,7 +4,7 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
+    color: #0C2550;
     text-align: left;
     background: #fff;
 }
