new watch only page

--- a/scss/_lightning.scss
+++ b/scss/_lightning.scss
@@ -207,3 +207,10 @@ section.lndhub button {
     margin-top: 96px;
     padding: 12px 60px !important;
 }
+.lightning .download {
+    background: transparent;
+    padding: 280px 0;
+}
+.lightning section.download h2 {
+    color: #ffffff;
+}   
