--- a/css/new-age.css
+++ b/css/new-age.css
@@ -32,7 +32,6 @@ h5,
 h6 {
   font-family: 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
-  letter-spacing: 1px;
 }
 
 p {
@@ -75,7 +74,6 @@ section h2 {
   color: #0C2550;
   font-family: 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 200;
-  letter-spacing: 1px;
 }
 
 #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
@@ -220,6 +218,27 @@ header.masthead .header-content h2 {
   }
   header.masthead .header-content h2 {
     font-size: 28px;
+  }
+}
+
+@media (max-width: 991px) {
+  header.masthead .apk {
+    text-align: center;
+  }
+}
+
+header.masthead .apk a {
+  padding: 8px 24px;
+  background: #f9f9f9;
+  border-radius: 6px;
+  display: inline-block;
+  color: #9AA0AA;
+}
+
+@media (max-width: 991px) {
+  header.masthead .apk a {
+    text-align: center;
+    margin: 0 auto;
   }
 }
 
