--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -29,6 +29,23 @@ header.masthead {
             }
         }
 
+
+    }
+    .apk {
+        @media (max-width: 991px) {
+        text-align: center;
+         }
+        a {
+            padding: 8px 24px;
+            background: #f9f9f9;
+            border-radius: 6px;
+            display: inline-block;
+            color: #9AA0AA;
+            @media (max-width: 991px) {
+                text-align: center;
+                margin: 0 auto;
+            }
+        }
     }
      @media (max-width: 991px) {
         .header-content {
