--- a/css/new-age.css
+++ b/css/new-age.css
@@ -40,6 +40,27 @@ p {
   margin-bottom: 20px;
 }
 
+@media (max-width: 991px) {
+  .apk {
+    text-align: center;
+  }
+}
+
+.apk a {
+  padding: 8px 24px;
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+  display: inline-block;
+  color: #9AA0AA;
+}
+
+@media (max-width: 991px) {
+  .apk a {
+    text-align: center;
+    margin: 0 auto;
+  }
+}
+
 section {
   padding: 96px 0;
 }
@@ -218,27 +239,6 @@ header.masthead .header-content h2 {
   }
   header.masthead .header-content h2 {
     font-size: 28px;
-  }
-}
-
-@media (max-width: 991px) {
-  header.masthead .apk {
-    text-align: center;
-  }
-}
-
-header.masthead .apk a {
-  padding: 8px 24px;
-  background: #f9f9f9;
-  border-radius: 6px;
-  display: inline-block;
-  color: #9AA0AA;
-}
-
-@media (max-width: 991px) {
-  header.masthead .apk a {
-    text-align: center;
-    margin: 0 auto;
   }
 }
 
