--- a/scss/_download.scss
+++ b/scss/_download.scss
@@ -1,8 +1,9 @@
 // Styling for the download section
+#download.home { padding: 226px 0 40px 0 !important; }
 section.download {
     position: relative;
     padding: 226px 0;
-    background: #F5F5F5;
+    background: #fff;
     h2 {
         font-size: 48px;
         margin-top: 0;
