--- a/css/new-age.css
+++ b/css/new-age.css
@@ -324,10 +324,14 @@ section.features .flightning button {
   text-decoration: underline;
 }
 
+#download.home {
+  padding: 226px 0 40px 0 !important;
+}
+
 section.download {
   position: relative;
   padding: 226px 0;
-  background: #F5F5F5;
+  background: #fff;
 }
 
 section.download h2 {
@@ -601,21 +605,114 @@ section.features .fwatchonly a {
   box-shadow: 0px 2px 16px 0px rgba(20, 44, 66, 0.1);
   border-radius: 6px;
   padding: 0px;
+  transition: all 0.5s ease;
 }
 
 .blog .medium-widget-article__item .medium-widget-article__image img {
   border-radius: 8px 8px 0px 0px;
 }
 
+.blog .medium-widget-article__item:hover {
+  transform: scale(0.99);
+  box-shadow: 0px 2px 30px 5px rgba(20, 44, 66, 0.1);
+}
+
 .blog .medium-widget-article__item .medium-widget-article__content {
   padding: 16px 24px;
+}
+
+.blog .medium-widget-article__item .medium-widget-article__content a {
+  color: #0C2550;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .blog .medium-widget-article__item:last-child {
   margin-right: 0px;
 }
 
-@media (max-width: 992px) {
+.blog p {
+  margin-bottom: 16px;
+}
+
+.blog .subscribe {
+  margin: 80px 0 0 0;
+}
+
+.opensource {
+  margin: 180px 0 90px 0;
+  box-shadow: 0px 2px 16px 0px rgba(20, 44, 66, 0.1);
+  padding: 30px 32px;
+  border-radius: 8px;
+}
+
+.opensource h3 {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.opensource p {
+  margin: 0;
+}
+
+@media (max-width: 767px) {
+  .opensource p {
+    margin-bottom: 40px;
+  }
+}
+
+.utils {
+  transition: all 0.5s ease;
+}
+
+.utils a {
+  display: inline-block;
+  width: 100%;
+  padding: 16px;
+}
+
+.utils a:hover {
+  text-decoration: none;
+}
+
+.utils div {
+  padding: 0;
+  border-radius: 6px;
+}
+
+.utils div:hover {
+  background: #F7FBFF;
+}
+
+.utils h5 {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.utils p {
+  font-size: 15px;
+  font-weight: 200;
+  margin: 0px;
+}
+
+.utils img {
+  margin-bottom: 16px;
+}
+
+@media (min-width: 992px) {
+  .utils {
+    text-align: left;
+  }
+  .utils img {
+    float: left;
+    margin-right: 16px;
+    margin-bottom: 0px;
+  }
+}
+
+@media (max-width: 991px) {
   .navbar-collapse {
     position: absolute;
     top: 20px;
@@ -797,14 +894,14 @@ section.contact .reach p {
 
 footer {
   padding: 96px 0;
-  text-align: left;
-  background: #F5F5F5;
+  text-align: center;
+  background: #fff;
   font-size: 12px;
-  color: #ccc;
+  color: #AFBCD2;
 }
 
 footer a {
-  color: #ccc;
+  color: #AFBCD2;
 }
 
 footer p {
@@ -855,7 +952,8 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 #mc_embed_signup2 {
-  margin: 40px 0 96px 0;
+  clear: left;
+  width: 100%;
 }
 
 #mc_embed_signup2 form {
@@ -867,23 +965,45 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
   display: inline-block;
 }
 
-/* positions input field horizontally */
+#mc_embed_signup_scroll {
+  justify-content: center !important;
+  width: 90%;
+  display: inline-flex;
+}
+
 #mc_embed_signup2 input.email {
-  font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
+  font-family: "Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
   font-size: 15px;
-  border: 1px solid #ABB0B2;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  color: #343434;
+  border: none;
+  box-shadow: 0px 2px 16px 0px rgba(20, 44, 66, 0.1);
+  border-radius: 6px 0 0 6px;
+  color: #0C2550;
   background-color: #fff;
   box-sizing: border-box;
-  height: 32px;
-  padding: 0px 0.4em;
+  padding: 16px;
   display: inline-block;
   margin: 0;
-  width: 350px;
-  vertical-align: top;
+  width: 90%;
+  max-width: 350px;
+  float: left;
+  height: 53px;
+}
+
+#mc_embed_signup2 input.email::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #AFBCD2;
+  opacity: 1;
+  /* Firefox */
+}
+
+#mc_embed_signup2 input.email:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #AFBCD2;
+}
+
+#mc_embed_signup2 input.email::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #AFBCD2;
 }
 
 #mc_embed_signup2 label {
@@ -899,21 +1019,20 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 
 /* positions button horizontally in line with input */
 #mc_embed_signup2 .button {
+  box-shadow: 0px 2px 16px 0px rgba(20, 44, 66, 0.1);
   font-size: 13px;
   border: none;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+  border-radius: 0px 6px 6px 0;
   letter-spacing: .03em;
   color: #fff;
   background-color: #57BBE4;
   box-sizing: border-box;
-  height: 32px;
-  line-height: 32px;
-  padding: 0 18px;
+  padding: 16px 32px;
   display: inline-block;
   margin: 0;
   transition: all 0.23s ease-in-out 0s;
+  float: left;
+  height: 53px;
 }
 
 #mc_embed_signup2 .button:hover {
@@ -966,6 +1085,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
   #mc_embed_signup2 .clear {
     display: block;
     width: 100%;
+    float: left;
   }
   #mc_embed_signup2 .button {
     width: 100%;
