--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,12 +1,12 @@
 // Styling for the footer
 footer {
     padding: 96px 0;
-    text-align: left;
-    background: #F5F5F5;
+    text-align: center;
+    background: #fff;
     font-size: 12px;
-    color: #ccc;
+    color: #AFBCD2;
     a {
-        color: #ccc;
+        color: #AFBCD2;
     }
     p {
         font-size: 14px;
@@ -52,13 +52,61 @@ footer {
 .foot-menu:hover{
     background: rgba(104,187,225,0.6);
 }
-#mc_embed_signup2 {margin: 40px 0 96px 0;}
+#mc_embed_signup2 {clear:left; width:100%;}
 #mc_embed_signup2 form {text-align:center; padding:10px 0 10px 0;}
-.mc-field-group { display: inline-block; } /* positions input field horizontally */
-#mc_embed_signup2 input.email {font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif; font-size: 15px; border: 1px solid #ABB0B2;  -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; color: #343434; background-color: #fff; box-sizing:border-box; height:32px; padding: 0px 0.4em; display: inline-block; margin: 0; width:350px; vertical-align:top;}
+.mc-field-group { display: inline-block; } 
+#mc_embed_signup_scroll {
+    justify-content: center!important;
+    width: 90%;
+    display: inline-flex;
+}
+#mc_embed_signup2 input.email {
+    font-family:"Helvetica Neue",Arial,Helvetica,Verdana,sans-serif; 
+    font-size: 15px;
+    border: none;
+    box-shadow: 0px 2px 16px 0px rgba(20,44,66,.1);
+    border-radius: 6px 0 0 6px; 
+    color: $dark-blue; 
+    background-color: #fff; 
+    box-sizing:border-box;  
+    padding: 16px; 
+    display: inline-block; 
+    margin: 0; 
+    width: 90%;
+    max-width:350px;
+    float: left;
+    height: 53px;
+    &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+      color: #AFBCD2; 
+      opacity: 1; /* Firefox */
+    }
+
+    &:-ms-input-placeholder { /* Internet Explorer 10-11 */
+      color: #AFBCD2; 
+    }
+
+    &::-ms-input-placeholder { /* Microsoft Edge */
+      color: #AFBCD2; 
+    }
+}
 #mc_embed_signup2 label {display:block; font-size:16px; padding-bottom:10px; font-weight:bold;}
 #mc_embed_signup2 .clear {display: inline-block;} /* positions button horizontally in line with input */
-#mc_embed_signup2 .button {font-size: 13px; border: none; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; letter-spacing: .03em; color: #fff; background-color: $light-blue; box-sizing:border-box; height:32px; line-height:32px; padding:0 18px; display: inline-block; margin: 0; transition: all 0.23s ease-in-out 0s;}
+#mc_embed_signup2 .button {
+    box-shadow: 0px 2px 16px 0px rgba(20,44,66,.1);
+    font-size: 13px; 
+    border: none; 
+    border-radius: 0px 6px 6px 0; 
+    letter-spacing: .03em; 
+    color: #fff; 
+    background-color: $light-blue; 
+    box-sizing:border-box; 
+    padding:16px 32px; 
+    display: inline-block; 
+    margin: 0; 
+    transition: all 0.23s ease-in-out 0s;
+    float: left;
+    height: 53px;
+}
 #mc_embed_signup2 .button:hover {background-color: $dark-blue; cursor:pointer;}
 #mc_embed_signup2 div#mce-responses {float:left; top:-1.4em; padding:0em .5em 0em .5em; overflow:hidden; width:90%;margin: 0 5%; clear: both;}
 #mc_embed_signup2 div.response {margin:1em 0; padding:1em .5em .5em 0; font-weight:bold; float:left; top:-1.5em; z-index:1; width:80%;}
@@ -67,6 +115,6 @@ footer {
 #mc_embed_signup2 label.error {display:block; float:none; width:auto; margin-left:1.05em; text-align:left; padding:.5em 0;}
 @media (max-width: 768px) {
     #mc_embed_signup2 input.email {width:100%; margin-bottom:5px;}
-    #mc_embed_signup2 .clear {display: block; width: 100% }
+    #mc_embed_signup2 .clear {display: block; width: 100%; float: left;}
     #mc_embed_signup2 .button {width: 100%; margin:0; }
 }
