--- a/css/new-age.css
+++ b/css/new-age.css
@@ -69,6 +69,16 @@ section h2 {
   font-size: 48px;
 }
 
+.privacy {
+  padding: 40px 0;
+}
+
+.privacy h2 {
+  font-weight: bold;
+  font-size: 28px;
+  padding-bottom: 24px;
+}
+
 @media (max-width: 992px) {
   .navbar-collapse {
     position: absolute;
