--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -61,6 +61,14 @@ section {
         font-size: 48px;
     }
 }
+.privacy {
+    padding: 40px 0;
+    h2 {
+        font-weight: bold;
+        font-size: 28px;
+        padding-bottom: 24px;
+    }
+}
 @media (max-width: 992px) {
   .navbar-collapse {
     position: absolute;
